# Yot-Presentation

./: .gitignore  README.md  V52_DOCUMENTATION.md  config.json  example.py  example_v52_usage.py  powerpoint_voice_controller_v52.py  pyproject.toml  requirements.txt  test_standalone.py  test_v52_components.py  test_yot_presentation.py  yot presentation.py  yot_presentation.py
.github/agents/: consistency.agent.md
api/: index.py
flutter/: pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/lib/: main.dart
flutter/lib/screens/: forex_screen.dart  presentation_screen.dart  settings_screen.dart  upload_screen.dart
flutter/lib/services/: api_service.dart  voice_service.dart
flutter/lib/widgets/: voice_button.dart
flutter/test/: widget_test.dart
tests/: test_v52_components.py  test_web_app.py
web/: app.py  requirements.txt
web/data/: yot_learning.db
web/static/css/: forex.css  style.css
web/static/js/: app.js  forex.js  presentation.js  voice.js
web/templates/: admin_dashboard.html  admin_login.html  forex.html  index.html
